# ai-tutor-hstory

./: .breakpoints  .gitignore  .replit  HistoricalCountries.csv  LICENSE_KEY_HOW_TO.md  README.md  WELCOME_FREE_TRIAL.md  app.py  chainlit.md  concierge_instructions.md  function_definitions.yaml  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: en-US.json
function_tools/: __init__.py  assistant_instructions.txt  callWolframCloudAPI.py  generate_image.py  getHistoricalCountriesByCurrentCountryAndYear.py  getHistoricalEvents.py  getMilitaryConflicts.py  getWarsByHistoricalCountryAndYear.py  imageSearch.py  mapCombined.py  mapHistoricalContinent.py  mapHistoricalCountry.py  mapWar.py  timelineCombined.py  timelineHistoricalPeriodsAndNotablePeople.py  timelinePerson.py  web_search_brave.py
license_management/: __init__.py  increment_license_key_usage_counter.py  license_key_db_ops.py  verify_license.py
wolfram/: AITutorHistoryAPI.wl
wolfram/notebooks/: CostEstimate.nb  cobinedTimeline.nb  cobinedTimelineWithIncorrectHandling.nb
